<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>luka_adapter</name>
  <version>0.0.1</version>
  <description>Adapter to connect 4AM Robotics's LUKA robot to VDA5050_controller</description>
  <maintainer email="loy.vanbeek@4am-robotics.de">Loy van Beek</maintainer>
  <license>Proprietary</license>

  <depend>vda5050_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
